# SentinelLayer

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.celery  Dockerfile.railway  Dockerfile.worker.railway  LICENSE  README.md  demo.sh  docker-compose.yml  main.py  pyproject.toml  railway.toml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: consent.py  keys.py  postmortem.py  sentinel.py  stream.py  webhooks.py
app/core/camara/: call_forwarding.py  client.py  consent_info.py  customer_insights.py  device_identifier.py  device_reachability.py  device_roaming.py  device_swap.py  device_visit.py  kyc_match.py  kyc_tenure.py  location_retrieve.py  location_verify.py  most_freq_location.py  number_recycling.py  number_verify.py  population_density.py  region_device_count.py  resilience.py  sim_swap.py
app/core/modes/: mode1.py  mode2.py  mode3.py
app/core/notifications/: fcm.py  maps.py  sse.py
app/core/scoring/: agent.py  rules.py  weights.py
app/core/security/: api_key.py  rate_limit.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 1928aa1edfa2_initial_schema.py
app/observability/: logging.py  metrics.py  tracing.py
app/schemas/: mode1.py  request.py  response.py
app/workers/: celery_app.py  sim_swap_listener.py
frontend/: .gitignore  get-token.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ModeTimeline.tsx  RiskGauge.tsx  SignalGrid.tsx
frontend/src/lib/: api.ts  sse.ts
frontend/src/pages/: Demo.tsx  Landing.tsx
kafka/: consumer.py  producer.py
observability/grafana/: datasources.yml
observability/prometheus/: prometheus.yml
tests/fixtures/: camara_responses.py
tests/integration/: conftest.py  test_sentinel_endpoint.py
tests/load/: locustfile.py
tests/unit/: test_coverage_boost.py  test_coverage_final.py  test_normalise.py  test_resilience.py  test_scoring.py
